[package]
name = "pane-calendar"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pane-calendar"
path = "src/main.rs"

[lib]
name = "pane_calendar"
path = "src/lib.rs"

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["glow", "wayland", "x11"] }
chrono = { version = "0.4", features = ["serde"] }
koyomi-rs = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = "0.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
